--- a/index-style.css
+++ b/index-style.css
@@ -142,7 +142,7 @@ a:visited:hover {
         width: 400px;
     }
     .name-card {
-        height: 800px;
+        height: 600px;
         width: 400px;
         position: relative;
         margin:0;
@@ -151,8 +151,13 @@ a:visited:hover {
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
     }
-    header {
-        height: 900px;
+    .jumbotron {
+        height: 800px;
+    }
+
+    #headshot-img {
+        height: 355px;
+        width: 250px;
     }
 }
 .name-card-text {
