--- a/index-style.css
+++ b/index-style.css
@@ -1,74 +1,69 @@
-@font-face {
-    font-family: Futura;
-    src: url(futura/futur.ttf);
-}
-
-@font-face {
-    font-family: SF Pro;
-    src:url(fonts/SF-Pro-Text-Regular.otf);
-}
-
-@font-face {
-    font-family: Futura Bold;
-    src: url(futura/Futura\ Bold\ font.ttf);
-}
-
-h1 {
-    font-family: Futura Bold;
-    font-size: 150%;
+#name {
+    margin: auto;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 86px;
+    line-height: 90%;
     color: #EC3599;
 }
-h2 {
-    font-family: Futura;
-    font-weight: 500;
-    font-size: 64px;
-    line-height: 85px;
-    color: #FFFFFF;
-    font-style: italic;
-}
-h3 {
-    font-family: Futura;
-    font-size: 48px;
-    color: #FFFFFF;
-}
-h4 {
-    font-family: SF Pro;
-    font-weight: normal;
+
+#software-developer {
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     font-size: 24px;
+    font-style: italic;
+    font-weight: 276;
+    line-height: 16px;
+    letter-spacing: 0em;
+    text-align: left;
     color: #828282;
-}
-/* Navbar and Links */
-nav.flexbox {
-    background-color: #101010;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-nav ul {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    list-style-type: none
+    padding-bottom: 10px;
 }
 
-nav li {
-    margin-right: 20px;
+#description {
+    font-family: SF Pro;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #333333;
+}
+
+#header-title {
+    font-family: Futura,Trebuchet MS,Arial,sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 64px;
+    color:#FFFFFF;
+    margin: 84px auto;
+}
+
+/* Navbar and Links */
+.navbar {
+    background-color: #101010;
+}
+
+#myNavbar7 {
+    justify-content: end;
+    margin-right: 15px;
 }
 
 a:link,
 a:visited {
-    font-family: Futura;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif;
     font-style: normal;
-    font-weight: 500;
     color: #FFFFFF;
     text-decoration: none;
 }
 
 a:link:hover,
 a:visited:hover {
-    font-family: Futura;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif;
     font-style: normal;
-    font-weight: 500;
     color: #EC3599;
     text-decoration: none;
 }
@@ -77,15 +72,30 @@ a:visited:hover {
 
 .jumbotron {
     height: auto;
-    height: 550px;
+    height: 730px;
     background: #101010;
     align-items: center;
     justify-content: center;
 }
+#headshot-img {
+    object-fit: cover;    
+    width: 337px;
+    height: 480px;
+    left: 309px;
+    top: 145px;
+    border-radius: 12px 0px 0px 12px;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+}
+
 .name-card {
     background: #FFFFFF;
-    height: 400px;
-    width: 800px;
+    height: 480px; width: 850px;
     margin: 0;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.16);
     border-radius: 12px;
@@ -95,55 +105,29 @@ a:visited:hover {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
-#headshot-img {
-    height: 400px;
-    width: 280px;
-    object-fit: cover;
-    border-radius: 12px;
-}
-.flex-container {
+.name-card-text {
     height: 400px;
     width: 800px;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
-}
-.name {
-    position: absolute;
-    width: 462px;
-    height: 154px;
-    left: 632px;
-    top: 241px;
-    line-height: 77px;
-}
-.name-title{
-    position: absolute;
-    width: 441px;
-    height: 32px;
-    left: 411px;
-    top: 460px;
-    line-height: 16px;
-}
-.desc {
-    line-height: 32px;
-    position: absolute;
-    width: 652px;
-    height: 118px;
-    left: 411px;
-    top: 503px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+    margin: 0 auto;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 700px) {
     .flex-container {
         flex-direction: column;
         align-items: center;
-        height: 800px;
-        width: 400px;
+        height: 750px;
+        width: 300px;
     }
     .name-card {
         height: 600px;
-        width: 400px;
+        width: 300px;
         position: relative;
         margin:0;
         top: 50%;
@@ -152,19 +136,30 @@ a:visited:hover {
         transform: translate(-50%, -50%);
     }
     .jumbotron {
-        height: 800px;
+        height: 700px;
     }
 
     #headshot-img {
-        height: 355px;
-        width: 250px;
+        height: 380px;
+        width: 300px;
     }
-}
-.name-card-text {
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 20px;
-    margin: 0 auto;
+
+    #name {
+        font-size: 45px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    
+    #software-developer {
+        font-size: 16px;
+        text-align: center;
+    }
+    
+    #description {
+        font-size: 16px;
+        text-align: center;
+
+    }
 }
 
 /* Portfolio */
@@ -174,13 +169,17 @@ a:visited:hover {
     width: 378px;
     left: 313px;
     line-height: 64px;
+    text-align: start;
+    margin: 0;
+    padding: 0;
 }
 .proj {
     position: relative;
-    width: 350px;
-    height: 75%;
+    width: 424px;
+    height: 516px;
     background: #FFFFFF;
     margin: 20px auto;
+    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.16);
     border-radius: 12px;
     padding: none;
     border: none;
@@ -192,26 +191,29 @@ a:visited:hover {
     text-decoration: none;
 }
 .proj-name {
-    font-family: Futura;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
+    line-height: 32px;
     color: #EC3599;
     transition: color 0.3s;
 }
 .proj-lang {
-    font-family: Futura;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif;
     font-style: italic;
     font-weight: 500;
     font-size: 16px;
+    line-height: 21px;
     color: #828282;
     transition: color 0.3s;
 }
 .proj-desc {
-    font-family: SF Pro;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     font-style: normal;
     font-weight: 510;
     font-size: 16px;
+    line-height: 19px;
     color: #333333;
     transition: color 0.3s;
 }
@@ -228,9 +230,15 @@ a:visited:hover {
 .proj-hover .card-body {
     text-decoration: none;
 }
-#proj-pic {
-    height: 250px;
+.proj-pic {
+    height: 330px;
+    object-fit: cover;
 }
+
+/* Skills */
+
+
+
 
 /* Footer */
 
@@ -239,26 +247,37 @@ footer {
     padding: 3px;
     background-color: #EC3599;
     color: white;
-    margin-top: 40px;
+    height: 300px;
+    bottom: 0;
 }
 
-.connect-text {
-    width: 230px;
-    height: 200px;
+.footer-text {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 16px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    
+}
+
+.connect-text {
+    font-family: Futura,Trebuchet MS,Arial,sans-serif;
+    font-style: italic;
+    font-weight: 500;
+    font-size: 64px;
+    line-height: 85px;
 }
 
 .input-text {
-    font-family: SF Pro;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     font-style: normal;
 }
 .input-shadow {
     box-shadow: inset 0px 4px 8px rgba(0, 0, 0, 0.14);
 }
 .button-submit {
-    background-color: #EC3599;
+    background-color: transparent;
     border-color: white;
     border-width: 2px;
     border-style: solid;
@@ -266,7 +285,7 @@ footer {
     padding: 5px 10px;
     margin: 5px;
     color: white;
-    font-family: Futura;
+    font-family: Futura,Trebuchet MS,Arial,sans-serif;
     float: left;
 }
 .button-submit:hover {
@@ -281,17 +300,23 @@ footer {
 
 #footerlink a:link,
 #footer-link a:visited {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 16px;
     color: #FFFFFF;
     text-decoration: none;
 }
 #footer-link a:hover,
 #footer-link a:visited:hover {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 16px;
     color: #FFFFFF;
     text-decoration: underline;
 }
 
 @media (max-width: 800px) {
-    .connect-text {
+    .footer-text {
         align-items: center;
     }
 }
